# PWSW

./: .gitignore
PWSWlab10/: .gitignore  PWSWlab10.slnx
PWSWlab10/FintechMonitor/: FintechMonitorService.cs  Program.cs
PWSWlab10/OrderPipeline/: Order.cs  Program.cs
PWSWlab10/PaymentGateway/: PaymentGateway.csproj  Program.cs  ResilientBankClient.cs
PWSWlab10/SecurityAudit/: Program.cs  deploy.ps1  (+2 more)
PWSWlab3/: PWSWlab3.slnx  Program.cs
PWSWlab4/: PWSWlab4.csproj  PWSWlab4.slnx  Program.cs  chat-history.db  chat-history.db-shm  chat-history.db-wal  conversation.db  sample-doc.txt
PWSWlab5/: AddLogCommand.cs  AgentOrchestrator.cs  ApprovalTerminationStrategy.cs  CommandHistory.cs  DanePogodowe.cs  DocumentChunk.cs  FilePlugin.cs  HrAssistantPlugin.cs  HrQuery.cs  HrQueryHandler.cs  IAgentCommand.cs  IAgentPlugin.cs  KlientPogody.cs  KnowledgeBase.cs  LogActionCommand.cs  LogCommandHistory.cs  LogEntry.cs  LogEntryExtensions.cs  LogExtensions.cs  LogZdarzenia.cs  LoggingBehavior.cs  MacroCommand.cs  Mediator.cs  PWSW5.csproj  PWSW5.slnx  PluginCallHandler.cs  PluginCallRequest.cs  Program.cs  QueryLoggingBehavior.cs  RagPlugin.cs  StringExtensions.cs  SymulowanyHandlerPogody.cs  WeatherPlugin.cs
PWSWlab6/audit_tool/: Cargo.toml  audit_report.txt  audit_tool.rsproj  audit_tool.slnx  build.ps1  install-cpp.ps1  vs-cpp-config.json
PWSWlab6/audit_tool/src/: file_ops.rs  main.rs  message.rs  registry.rs  system_info.rs
PWSWlab8/: .gitattributes  PWSWlab8.sln  dev.sh
PWSWlab9/: .gitignore  PWSWlab9.slnx  setup-branch-protection.ps1  test-matrix-local.ps1
(+366 files in other folders)
