[package]
name = "audit_tool"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Graphics_Dxgi",
]
